ags (2.4.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potentially freed env pointer

ags (2.4.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsPriority to configure RT threads

ags (2.4.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved idle CPU usage
	* implemented ags_cell_pattern_play()
	* fixed AgsNotationEdit position cursor by using left or right key

ags (2.4.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented playback as clicking AgsPiano of AgsNotationEditor
	* implemented missing feedback of AgsNotationEditor
	* implemented ags_machine_playback_set_active()
	* implemented AgsResetNote
	* implemented AgsSF2Loader
	* implemented ags_audio_loop_test_flags(), ags_audio_loop_set_flags() and ags_audio_loop_unset_flags()
	* refactored ags_pad_play() to use ags_machine_playback_set_active()
	* refactored AgsStartAudio task to use ags_audio_start()
	* refactored AgsStartChannel task to use ags_channel_start()
	* refactored AgsCancelAudio task to use ags_audio_stop()
	* refactored AgsCancelChannel task to use ags_channel_stop()
	* improved AgsFFPlayer to use AgsSF2Loader
	* improved AgsPiano missing event mask
	* improved ags_audio_start() to start audio and channel thread
	* improved ags_channel_start() to start audio and channel thread
	* updated the API reference manual
	* fixed ags_piano_key_code_to_note() static const array note_map
	* fixed ref count in ags_notation_editor_do_feedback()
	* fixed ags_recycling_get_property() missing break
	* minor improvements
	* m4/lib-ld.m4: Upgrade to gettext-0.19.8.1.
	* m4/lib-link.m4: Upgrade to gettext-0.19.8.1.
	* m4/lib-prefix.m4: Upgrade to gettext-0.19.8.1.

ags (2.3.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_strv_contains() to compare strings
	* fixed AgsApplySoundConfig task to setup AgsWasapiDevout's AgsNotifySoundcard and AgsExportThread